--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.datasource.url=jdbc:h2:./pwa
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:./pwac
+spring.jpa.hibernate.ddl-auto= update
+spring.data.rest.base-path=/api
